--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -1,5 +1,8 @@
 html {
   overflow: overlay;
+
+  background-image: linear-gradient(rgb(255, 177, 88), 85%, rgb(248, 140, 17));
+  height: 100%;
 }
 
 html, #root {
@@ -7,8 +10,7 @@ html, #root {
   flex-direction: column;
   align-items: center;
   width: 100%;
-  background-color: rgb(45 35 44);
-  color: rgb(230, 195, 130);
+  color: rgb(122, 48, 48);
 }
 
 #root {
@@ -28,16 +30,6 @@ html, #root {
   font-family: 'Jost';
 }
 
-.head {
-  border: 1px solid rgb(95, 67, 104);
-  border-style: none none solid none;
-
-  width: 100%;
-  padding-top: 4px;
-  padding-bottom: 12px;
-  box-sizing: border-box;
-}
-
 h1, h2, h3 {
   margin: 0px;
 }
@@ -45,7 +37,7 @@ h1, h2, h3 {
 h3 {
   margin: 4px;
   margin-left: 12px;
-  color: rgb(181, 141, 190);
+  color: rgb(122, 48, 48);
 }
 
 .h {
@@ -61,8 +53,6 @@ h3 {
 
 .main {
   width: 100%;
-  border: 1px solid rgb(104, 72, 112);
-  border-style: none none solid none;
   margin-bottom: 32px;
 }
 
@@ -85,23 +75,4 @@ canvas {
 
 .navButtons {
   width: 20vw;
-}
-
-#updateButton {
-  width: 120px;
-  margin: 0;
-}
-
-::-webkit-scrollbar {
-  border: 1px solid rgb(104, 72, 112);
-  background-color: rgb(45 35 44);
-}
-
-::-webkit-scrollbar-thumb {
-  border: 1px solid rgb(104, 72, 112);
-  background-color: rgb(80, 57, 87);
-}
-
-.hidden {
-  display: none;
 }
